--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,3 @@
 theme: jekyll-theme-cayman
 title: Big on Data
-
----
-layout: default
-comments: true
-# other options
----
+google_analytics: UA-108205532-1
