--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-theme: jekyll-theme-minimal
+remote_theme: mmistakes/minimal-mistakes@4.20.1
 title: Gilian Ponte
 description: [A short description of your site's purpose]
 ---
