--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ locale                   : "en-US"
 title                    : "Gilian Ponte"
 title_separator          : "-"
 name                     : &name "Gilian Ponte"
-description              : &description "PhD student Marketing"
+description              : &description "Personal page"
 url                      : https://gilianponte.nl # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "GilianPonte/gilianponte.github.io"
