--- a/_config.yml
+++ b/_config.yml
@@ -88,7 +88,7 @@ author:
   pubmed           : 
   googlescholar    :
   email            :
-  researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
+  researchgate     : "https://www.researchgate.net/profile/Gilian_Ponte"
   uri              :
   bitbucket        :
   codepen          :
