--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ title                    : "Gilian Ponte"
 title_separator          : "-"
 name                     : &name "Gilian Ponte"
 description              : &description "Personal page"
-url                      : https://gilianponte.nl # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : "https://gilianponte.nl"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "GilianPonte/gilianponte.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
