--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,7 @@
 
 # Site Settings
 locale                   : "en-US"
+minimal_mistakes_skin    : "dark"
 title                    : "Gilian Ponte"
 title_separator          : "-"
 name                     : &name "Gilian Ponte"
