--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,10 @@
 
 # Site Settings
 locale                   : "en-US"
-minimal_mistakes_skin    : "dark"
+plugins:
+  - jekyll-remote-theme
+remote_theme           : "mmistakes/minimal-mistakes"
+minimal_mistakes_skin    : "dark" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
 title                    : "Gilian Ponte"
 title_separator          : "-"
 name                     : &name "Gilian Ponte"
