--- a/_config.yml
+++ b/_config.yml
@@ -83,7 +83,7 @@ author:
   name             : "Personal page"
   avatar           : "profile.png"
   bio              : "PhD student Marketing"
-  location         : "Groningen"
+  location         : "Groningen, The Netherlands"
   employer         : "Rijksuniversiteit Groningen"
   pubmed           : 
   googlescholar    :
