--- a/_config.yml
+++ b/_config.yml
@@ -80,7 +80,7 @@ analytics:
 
 # Site Author
 author:
-  name             : "Personal page"
+  name             : "Gilian Ponte"
   avatar           : "https://gilianponte.nl/files/Knipsel.PNG"
   bio              : "PhD student Marketing"
   location         : "Groningen, The Netherlands"
