--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Gilian Ponte"
-  avatar           : "https://gilianponte.nl/files/photo.PNG"
+  avatar           : "https://gilianponte.nl/files/photo.png"
   bio              : "Ph.D student Marketing"
   location         : "Groningen, The Netherlands"
   employer         : "Rijksuniversiteit Groningen"
