--- a/_config.yml
+++ b/_config.yml
@@ -86,9 +86,9 @@ author:
   location         : "Groningen, The Netherlands"
   employer         : "Rijksuniversiteit Groningen"
   pubmed           : 
-  googlescholar    :
+  googlescholar    : https://scholar.google.com/citations?user=xHIQ7lAAAAAJ&hl
   email            :
-  researchgate     : "https://www.researchgate.net/profile/Gilian_Ponte"
+  researchgate     :
   uri              :
   bitbucket        :
   codepen          :
