--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ title                    : "Gilian's thoughts"
 title_separator          : "-"
 name                     : &name "Gilian Ponte"
 description              : &description "personal description"
-url                      : https://gilianponte.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : "https://gilianponte.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : ""
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
@@ -29,7 +29,7 @@ comments:
   facebook:
     appid                :
     num_posts            : # 5 (default)
-    colorscheme          : # "light" (default), "dark"
+    colorscheme          : "light"
 staticman:
   allowedFields          : ['name', 'email', 'url', 'message']
   branch                 : "gh-pages" # "master", "gh-pages"
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Gilian's thoughts"
-  avatar           : ""
+  avatar           : "https://github.com/GilianPonte/gilianponte.github.io/blob/master/files/yes.png"
   bio              : "Your biography for the left-hand sidebar"
   location         : "Location"
   employer         : "University of Groningen"
