--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Gilian's thoughts"
   avatar           : "https://github.com/GilianPonte/gilianponte.github.io/blob/master/files/yes.png"
-  bio              : "Your biography for the left-hand sidebar"
+  bio              : "My random thoughts"
   location         : "Location"
   employer         : "University of Groningen"
   pubmed           : 
