--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Gilian's thoughts"
-  avatar           : "https://github.com/GilianPonte/gilianponte.github.io/blob/master/files/yes.png"
+  avatar           : "files/foto.png"
   bio              : "My random thoughts"
   location         : "Location"
   employer         : "University of Groningen"
