--- a/_config.yml
+++ b/_config.yml
@@ -193,17 +193,14 @@ collections:
 defaults:
   # _posts
   - scope:
-      path: ""
+      path: "posts/"
       type: posts
     values:
       layout: single
-      author_profile: true
       read_time: true
       comments: true
       share: true
       related: true
-      toc: true
-      toc_sticky: true
   # _pages
   - scope:
       path: ""
