--- a/_config.yml
+++ b/_config.yml
@@ -84,7 +84,7 @@ author:
   name             : "Gilian's thoughts"
   avatar           : "files/foto.png"
   bio              : "My random thoughts"
-  location         : "Location"
+  location         : "Groningen, The Netherlands"
   employer         : "University of Groningen"
   pubmed           : 
   googlescholar    : 
