--- a/_config.yml
+++ b/_config.yml
@@ -194,7 +194,7 @@ collections:
 defaults:
   # _posts
   - scope:
-      path: "posts/"
+      path: ""
       type: posts
     values:
       layout: single
