--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,7 @@
 # main links links
 main:
 
-  - title: "Publications"
+  - title: "Research"
     url: /publications/
         
   - title: "Talks"
