--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 # Site Author
 author:
   name             : "Gilian's thoughts"
-  avatar           : "files/foto.png"
+  avatar           : "https://github.com/GilianPonte/gilianponte.github.io/blob/23def409ddf927c295ed49ebc1b5696f05045d5b/files/foto.JPG"
   bio              : "My random thoughts"
   location         : "Groningen, The Netherlands"
   employer         : "University of Groningen"
