--- a/_config.yml
+++ b/_config.yml
@@ -85,7 +85,7 @@ author:
   avatar           : "https://github.com/GilianPonte/gilianponte.github.io/blob/23def409ddf927c295ed49ebc1b5696f05045d5b/files/foto.JPG"
   bio              : "My random thoughts"
   location         : "Rotterdam, The Netherlands"
-  employer         : "Rotterdam School of Management, Erasmus University Rotterdam"
+  employer         : "Rotterdam School of Management"
   pubmed           : 
   googlescholar    : 
   email            :
