--- a/_config.yml
+++ b/_config.yml
@@ -87,7 +87,7 @@ author:
   location         : "Rotterdam, The Netherlands"
   employer         : "Rotterdam School of Management"
   pubmed           : 
-  googlescholar    : 
+  googlescholar    : "https://scholar.google.com/citations?user=4rNIAcoAAAAJ&hl=nl"
   email            :
   researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
   uri              :
