--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ description              : &description "personal description"
 url                      : "https://gilianponte.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : ""
-teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
+teaser                   :  "https://github.com/GilianPonte/gilianponte.github.io/blob/master/files/Naamloos2.png" # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
 words_per_minute         : 160
 future                   : true
