--- a/_config.yml
+++ b/_config.yml
@@ -82,8 +82,8 @@ analytics:
 # Site Author
 author:
   name             : ""
-  avatar           : "https://github.com/GilianPonte/gilianponte.github.io/blob/23def409ddf927c295ed49ebc1b5696f05045d5b/files/foto.JPG"
-  bio              : "My random thoughts"
+  avatar           : "Naamloos2.png"
+  bio              : "Personal site"
   location         : "Rotterdam, The Netherlands"
   employer         : "Rotterdam School of Management"
   pubmed           : 
