--- a/_config.yml
+++ b/_config.yml
@@ -83,7 +83,7 @@ analytics:
 author:
   name             : ""
   avatar           : "Naamloos2.png"
-  bio              : "Personal site"
+  bio              : ""
   location         : "Rotterdam, The Netherlands"
   employer         : "Rotterdam School of Management"
   pubmed           : 
