--- a/_config.yml
+++ b/_config.yml
@@ -88,7 +88,7 @@ author:
   employer         : "Rotterdam School of Management"
   pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?user=4rNIAcoAAAAJ&hl=nl"
-  email            :
+  email            : "ponte@rsm.nl"
   researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
   uri              :
   bitbucket        :
