--- a/_config.yml
+++ b/_config.yml
@@ -103,7 +103,7 @@ author:
   instagram        :
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         : "https://www.linkedin.com/in/gilianponte/"
+  linkedin         : "in/gilianponte/"
   orcid            : "http://orcid.org/0000-0002-9390-8039"
   pinterest        :
   soundcloud       :
