--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,11 +1,11 @@
 # main links links
 main:
 
-  - title: "Research"
+  - title: "Music"
     url: /publications/
         
-  - title: "Talks"
+  - title: "Books"
     url: /talks/    
 
-  - title: "Teaching"
+  - title: "Restaurants"
     url: /teaching/    
